<resources>
    <string name="app_name">Dumb Charades Tool</string>
    <string name="guessed_right">Guessed Right</string>
    <string name="start">Start</string>
    <string name="emoji_circle">emoji_circle</string>
    <string name="clock_hands">clock_hands</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="msg_token_fmt" />
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="zero_timer">00:00</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="stopwatch_is_running">Stopwatch Is Running</string>
    <string name="generate">Generate</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="en">en</string>
    <string name="_1990">1990</string>
    <string name="go">Go</string>
    <string name="select_year">Select Year</string>
    <string name="select_language">Select Language</string>
    <string-array name="languages">
        <item>English</item>
        <item>Hindi</item>
        <item>Punjabi</item>
    </string-array>
<!--        <item>Afar</item>-->
<!--        <item>Abkhazian</item>-->
<!--        <item>Avestan</item>-->
<!--        <item>Afrikaans</item>-->
<!--        <item>Akan</item>-->
<!--        <item>Amharic</item>-->
<!--        <item>Aragonese</item>-->
<!--        <item>Arabic</item>-->
<!--        <item>Assamese</item>-->
<!--        <item>Avaric</item>-->
<!--        <item>Aymara</item>-->
<!--        <item>Azerbaijani</item>-->
<!--        <item>Bashkir</item>-->
<!--        <item>Belarusian</item>-->
<!--        <item>Bulgarian</item>-->
<!--        <item>Bihari</item>-->
<!--        <item>Bislama</item>-->
<!--        <item>Bambara</item>-->
<!--        <item>Bengali</item>-->
<!--        <item>Tibetan</item>-->
<!--        <item>Breton</item>-->
<!--        <item>Bosnian</item>-->
<!--        <item>Catalan</item>-->
<!--        <item>Chechen</item>-->
<!--        <item>Chamorro</item>-->
<!--        <item>Corsican</item>-->
<!--        <item>Cree</item>-->
<!--        <item>Czech</item>-->
<!--        <item>Church Slavic</item>-->
<!--        <item>Chuvash</item>-->
<!--        <item>Welsh</item>-->
<!--        <item>Danish</item>-->
<!--        <item>German</item>-->
<!--        <item>Divehi</item>-->
<!--        <item>Dzongkha</item>-->
<!--        <item>Ewe</item>-->
<!--        <item>Greek</item>-->
<!--        <item>Esperanto</item>-->
<!--        <item>Spanish</item>-->
<!--        <item>Estonian</item>-->
<!--        <item>Basque</item>-->
<!--        <item>Persian</item>-->
<!--        <item>Fulah</item>-->
<!--        <item>Finnish</item>-->
<!--        <item>Fijian</item>-->
<!--        <item>Faroese</item>-->
<!--        <item>French</item>-->
<!--        <item>Western Frisian</item>-->
<!--        <item>Irish</item>-->
<!--        <item>Gaelic</item>-->
<!--        <item>Galician</item>-->
<!--        <item>Guarani</item>-->
<!--        <item>Gujarati</item>-->
<!--        <item>Manx</item>-->
<!--        <item>Hausa</item>-->
<!--        <item>Hebrew</item>-->
<!--        <item>Hiri Motu</item>-->
<!--        <item>Croatian</item>-->
<!--        <item>Haitian</item>-->
<!--        <item>Hungarian</item>-->
<!--        <item>Armenian</item>-->
<!--        <item>Herero</item>-->
<!--        <item>Interlingua</item>-->
<!--        <item>Indonesian</item>-->
<!--        <item>Interlingue</item>-->
<!--        <item>Igbo</item>-->
<!--        <item>Sichuan Yi</item>-->
<!--        <item>Inupiaq</item>-->
<!--        <item>Ido</item>-->
<!--        <item>Icelandic</item>-->
<!--        <item>Italian</item>-->
<!--        <item>Inuktitut</item>-->
<!--        <item>Japanese</item>-->
<!--        <item>Javanese</item>-->
<!--        <item>Georgian</item>-->
<!--        <item>Kongo</item>-->
<!--        <item>Kikuyu</item>-->
<!--        <item>Kuanyama</item>-->
<!--        <item>Kazakh</item>-->
<!--        <item>Kalaallisut</item>-->
<!--        <item>Central Khmer</item>-->
<!--        <item>Kannada</item>-->
<!--        <item>Korean</item>-->
<!--        <item>Kanuri</item>-->
<!--        <item>Kashmiri</item>-->
<!--        <item>Kurdish</item>-->
<!--        <item>Komi</item>-->
<!--        <item>Cornish</item>-->
<!--        <item>Kyrgyz</item>-->
<!--        <item>Latin</item>-->
<!--        <item>Luxembourgish</item>-->
<!--        <item>Ganda</item>-->
<!--        <item>Limburgan</item>-->
<!--        <item>Lingala</item>-->
<!--        <item>Lao</item>-->
<!--        <item>Lithuanian</item>-->
<!--        <item>Luba-Katanga</item>-->
<!--        <item>Latvian</item>-->
<!--        <item>Malagasy</item>-->
<!--        <item>Marshallese</item>-->
<!--        <item>Maori</item>-->
<!--        <item>Macedonian</item>-->
<!--        <item>Malayalam</item>-->
<!--        <item>Mongolian</item>-->
<!--        <item>Marathi</item>-->
<!--        <item>Malay</item>-->
<!--        <item>Maltese</item>-->
<!--        <item>Burmese</item>-->
<!--        <item>Nauru</item>-->
<!--        <item>Norwegian</item>-->
<!--        <item>North Ndebele</item>-->
<!--        <item>Nepali</item>-->
<!--        <item>Ndonga</item>-->
<!--        <item>Dutch</item>-->
<!--        <item>Norwegian Nynorsk</item>-->
<!--        <item>Norwegian</item>-->
<!--        <item>South Ndebele</item>-->
<!--        <item>Navaho</item>-->
<!--        <item>Nyanja</item>-->
<!--        <item>Occitan</item>-->
<!--        <item>Ojibwa</item>-->
<!--        <item>Oromo</item>-->
<!--        <item>Oriya</item>-->
<!--        <item>Ossetic</item>-->
<!--        <item>Pali</item>-->
<!--        <item>Polish</item>-->
<!--        <item>Pashto</item>-->
<!--        <item>Portuguese</item>-->
<!--        <item>Quechua</item>-->
<!--        <item>Romansh</item>-->
<!--        <item>Rundi</item>-->
<!--        <item>Romanian</item>-->
<!--        <item>Russian</item>-->
<!--        <item>Kinyarwanda</item>-->
<!--        <item>Sanskrit</item>-->
<!--        <item>Sardinian</item>-->
<!--        <item>Sindhi</item>-->
<!--        <item>Northern Sami</item>-->
<!--        <item>Sango</item>-->
<!--        <item>Sinhalese</item>-->
<!--        <item>Slovak</item>-->
<!--        <item>Slovenian</item>-->
<!--        <item>Samoan</item>-->
<!--        <item>Shona</item>-->
<!--        <item>Somali</item>-->
<!--        <item>Albanian</item>-->
<!--        <item>Serbian</item>-->
<!--        <item>Swati</item>-->
<!--        <item>Sotho</item>-->
<!--        <item>Sundanese</item>-->
<!--        <item>Swedish</item>-->
<!--        <item>Swahili</item>-->
<!--        <item>Tamil</item>-->
<!--        <item>Telugu</item>-->
<!--        <item>Tajik</item>-->
<!--        <item>Thai</item>-->
<!--        <item>Tigrinya</item>-->
<!--        <item>Turkmen</item>-->
<!--        <item>Tagalog</item>-->
<!--        <item>Tswana</item>-->
<!--        <item>Tonga</item>-->
<!--        <item>Turkish</item>-->
<!--        <item>Tsonga</item>-->
<!--        <item>Tatar</item>-->
<!--        <item>Twi</item>-->
<!--        <item>Tahitian</item>-->
<!--        <item>Uighur</item>-->
<!--        <item>Ukrainian</item>-->
<!--        <item>Urdu</item>-->
<!--        <item>Uzbek</item>-->
<!--        <item>Venda</item>-->
<!--        <item>Vietnamese</item>-->
<!--        <item>VolapÃ¼k</item>-->
<!--        <item>Walloon</item>-->
<!--        <item>Wolof</item>-->
<!--        <item>Xhosa</item>-->
<!--        <item>Yiddish</item>-->
<!--        <item>Yoruba</item>-->
<!--        <item>Zhuang</item>-->
<!--        <item>Chinese</item>-->
<!--        <item>Zulu</item>-->
</resources>